--- a/HelloWorld/app/src/main/res/layout/content_main.xml
+++ b/HelloWorld/app/src/main/res/layout/content_main.xml
@@ -10,5 +10,8 @@
     tools:showIn="@layout/activity_main" tools:context=".MainActivity">
 
     <TextView android:text="Hello World!" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 </RelativeLayout>
