validate data; clear data

--- a/Calculator/app/src/main/res/layout/content_main.xml
+++ b/Calculator/app/src/main/res/layout/content_main.xml
@@ -79,6 +79,13 @@
             android:layout_height="wrap_content"
             android:text="x" />
 
+        <Button
+            style="?android:attr/buttonStyleSmall"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Clear"
+            android:id="@+id/btnClear" />
+
     </LinearLayout>
 
     <TextView
