--- a/YoutubeApp/app/src/main/res/layout/content_youtube.xml
+++ b/YoutubeApp/app/src/main/res/layout/content_youtube.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0"	encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
@@ -9,11 +9,9 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:showIn="@layout/activity_youtube"
     tools:context="com.toggleable.morgan.youtubeapp.YoutubeActivity">
-
     <com.google.android.youtube.player.YouTubePlayerView
         android:id="@+id/youtube_player"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#FFFFFF" />
-
+        android:background="#ffffff"/>
 </LinearLayout>
