--- a/YoutubeApp/app/src/main/res/layout/content_main.xml
+++ b/YoutubeApp/app/src/main/res/layout/content_main.xml
@@ -1,6 +1,6 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml	version="1.0"	encoding="utf-8"?>
 <LinearLayout
-    xmlns:android="http://schemas.android.com/apk/android"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
@@ -8,16 +8,17 @@
     android:orientation="vertical"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:showIn="@layout/activity_main"
-    tools:context="com.toggleable.morgan.youtubeapp.MainActivity">
-
+    tools:context="com.togglabe.morgan.youtubeapp.MainActivity">
     <Button
         android:id="@+id/btnPlaySingle"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_conent"
+        android:layout_height="wrap_content"
         android:layout_margin="5dp"
-        android:text="Play Single Video" />
+        android:text="Play Single Video"/>
     <Button
-        android
-         />
-
+        android:id="@+id/btnStandalone"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="5dp"
+        android:text="Standalone SubMenu"/>
 </LinearLayout>
