--- a/YoutubeApp/app/src/main/res/layout/content_standalone.xml
+++ b/YoutubeApp/app/src/main/res/layout/content_standalone.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0"	encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
@@ -8,20 +8,17 @@
     android:orientation="vertical"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:showIn="@layout/activity_standalone"
-    tools:context="com.toggleable.morgan.youtubeapp.StandaloneActivity">
-
-<Button
-    android:id="@+id/btnPlayVideo"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_margin="5dp"
-    android:text="Play Video" />
-
-<Button
-    android:id="@+id/btnPlaylist"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_margin="5dp"
-    android:text="Play Playlist" />
-
+    tools:context="com.timbuchalka.youtubeplayer.StandaloneActivity">
+    <Button
+        android:id="@+id/btnPlayVideo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="5dp"
+        android:text="Play	Video"/>
+    <Button
+        android:id="@+id/btnPlaylist"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="5dp"
+        android:text="Play	Playlist"/>
 </LinearLayout>
