--- a/Animations/app/src/main/res/layout/activity_main.xml
+++ b/Animations/app/src/main/res/layout/activity_main.xml
@@ -17,7 +17,7 @@
         android:layout_alignParentStart="true"
         android:src="@drawable/space1"
         android:nestedScrollingEnabled="false"
-        android:onClick="fadeSpace2"
+        android:onClick="fade"
         android:layout_alignParentRight="false"
         android:layout_alignParentBottom="false"/>
 
@@ -30,6 +30,5 @@
         android:layout_alignParentStart="true"
         android:src="@drawable/space2"
         android:alpha="0"
-        android:onClick="fadeSpace1"
         android:nestedScrollingEnabled="true"/>
 </RelativeLayout>
