--- a/Animations/app/src/main/res/layout/activity_main.xml
+++ b/Animations/app/src/main/res/layout/activity_main.xml
@@ -17,9 +17,9 @@
         android:layout_alignParentStart="true"
         android:src="@drawable/space1"
         android:nestedScrollingEnabled="false"
-        android:onClick="fade"
         android:layout_alignParentRight="false"
-        android:layout_alignParentBottom="false"/>
+        android:layout_alignParentBottom="false"
+        android:onClick="fade"/>
 
     <ImageView
         android:layout_width="match_parent"
@@ -29,6 +29,7 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:src="@drawable/space2"
-        android:alpha="0"
-        android:nestedScrollingEnabled="true"/>
+        android:alpha="0.2"
+        android:nestedScrollingEnabled="true"
+        android:onClick="fade"/>
 </RelativeLayout>
