--- a/TicTacToe/app/src/main/res/layout/activity_main.xml
+++ b/TicTacToe/app/src/main/res/layout/activity_main.xml
@@ -24,11 +24,12 @@
             android:id="@+id/squareOneOne"
             android:layout_row="0"
             android:layout_column="0"
-            android:src="@drawable/red"
             android:layout_marginLeft="10dp"
             android:layout_marginTop="10dp"
             android:layout_marginRight="10dp"
-            android:layout_marginBottom="10dp"/>
+            android:layout_marginBottom="10dp"
+            android:onClick="dropIn"
+            android:tag="0"/>
 
         <ImageView
             android:layout_width="90dp"
@@ -36,11 +37,12 @@
             android:id="@+id/squareOneTwo"
             android:layout_row="0"
             android:layout_column="1"
-            android:src="@drawable/red"
-            android:layout_marginLeft="20dp"
+            android:layout_marginLeft="10dp"
             android:layout_marginTop="10dp"
             android:layout_marginRight="10dp"
-            android:layout_marginBottom="10dp"/>
+            android:layout_marginBottom="10dp"
+            android:onClick="dropIn"
+            android:tag="1"/>
 
         <ImageView
             android:layout_width="90dp"
@@ -48,11 +50,11 @@
             android:id="@+id/squareOneThree"
             android:layout_row="0"
             android:layout_column="2"
-            android:src="@drawable/red"
-            android:layout_marginLeft="20dp"
+            android:layout_marginLeft="10dp"
             android:layout_marginTop="10dp"
-            android:layout_marginRight="10dp"
-            android:layout_marginBottom="10dp"/>
+            android:layout_marginBottom="10dp"
+            android:onClick="dropIn"
+            android:tag="2"/>
 
         <ImageView
             android:layout_width="90dp"
@@ -60,10 +62,11 @@
             android:id="@+id/squareTwoOne"
             android:layout_row="1"
             android:layout_column="0"
-            android:src="@drawable/red"
             android:layout_marginTop="20dp"
             android:layout_marginBottom="20dp"
-            android:layout_marginLeft="10dp"/>
+            android:layout_marginLeft="10dp"
+            android:onClick="dropIn"
+            android:tag="3"/>
 
         <ImageView
             android:layout_width="90dp"
@@ -71,9 +74,10 @@
             android:id="@+id/squareTwoTwo"
             android:layout_row="1"
             android:layout_column="1"
-            android:layout_marginLeft="20dp"
+            android:layout_marginLeft="10dp"
             android:layout_marginTop="20dp"
-            android:onClick="dropIn"/>
+            android:onClick="dropIn"
+            android:tag="4"/>
 
         <ImageView
             android:layout_width="90dp"
@@ -81,9 +85,10 @@
             android:id="@+id/squareTwoThree"
             android:layout_row="1"
             android:layout_column="2"
-            android:src="@drawable/red"
-            android:layout_marginLeft="20dp"
-            android:layout_marginTop="20dp"/>
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="20dp"
+            android:onClick="dropIn"
+            android:tag="5"/>
 
         <ImageView
             android:layout_width="90dp"
@@ -91,10 +96,10 @@
             android:id="@+id/squareThreeOne"
             android:layout_row="2"
             android:layout_column="0"
-            android:src="@drawable/red"
             android:layout_marginLeft="10dp"
             android:layout_marginTop="20dp"
-            android:focusableInTouchMode="false"/>
+            android:onClick="dropIn"
+            android:tag="6"/>
 
         <ImageView
             android:layout_width="90dp"
@@ -102,9 +107,10 @@
             android:id="@+id/squareThreeTwo"
             android:layout_row="2"
             android:layout_column="1"
-            android:src="@drawable/red"
-            android:layout_marginLeft="20dp"
-            android:layout_marginTop="20dp"/>
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="20dp"
+            android:onClick="dropIn"
+            android:tag="7"/>
 
         <ImageView
             android:layout_width="90dp"
@@ -112,9 +118,10 @@
             android:id="@+id/squareThreeThree"
             android:layout_row="2"
             android:layout_column="2"
-            android:src="@drawable/red"
-            android:layout_marginLeft="20dp"
-            android:layout_marginTop="20dp"/>
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="20dp"
+            android:onClick="dropIn"
+            android:tag="8"/>
 
     </GridLayout>
 </RelativeLayout>
