--- a/TicTacToe/app/src/main/res/layout/activity_main.xml
+++ b/TicTacToe/app/src/main/res/layout/activity_main.xml
@@ -16,7 +16,8 @@
         android:columnCount="3"
         android:rowCount="3"
         android:background="@drawable/board"
-        android:layout_alignParentEnd="true">
+        android:layout_alignParentEnd="true"
+        android:id="@+id/gridLayout">
 
         <ImageView
             android:layout_width="90dp"
@@ -124,4 +125,34 @@
             android:tag="8"/>
 
     </GridLayout>
+
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="#ffbe99"
+        android:padding="30dp"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true"
+        android:alpha="0"
+        android:id="@+id/playAgainLayout"
+        android:focusableInTouchMode="false">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="New Text"
+            android:id="@+id/txtEndGame"
+            android:layout_gravity="center_horizontal"
+            android:textSize="30sp"/>
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Play Again!"
+            android:id="@+id/btnPlayAgain"
+            android:layout_gravity="center_horizontal"
+            android:onClick="playAgain"
+            />
+    </LinearLayout>
 </RelativeLayout>
