--- a/VideoDemo/app/src/main/res/layout/activity_main.xml
+++ b/VideoDemo/app/src/main/res/layout/activity_main.xml
@@ -8,4 +8,10 @@
                 android:paddingBottom="@dimen/activity_vertical_margin"
                 tools:context=".MainActivity">
 
+    <VideoView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/videoView"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true"/>
 </RelativeLayout>
