--- a/PostmatesClone/app/src/main/res/layout/activity_login.xml
+++ b/PostmatesClone/app/src/main/res/layout/activity_login.xml
@@ -48,6 +48,7 @@
         android:layout_centerHorizontal="true"
         android:text="LOG IN !!!!!!!!!!"
         android:textSize="30sp"
+        android:layout_above="@+id/emailText"
         android:textAlignment="center"
         android:textStyle="bold"/>
 
