--- a/PostmatesClone/app/src/main/res/layout/activity_main.xml
+++ b/PostmatesClone/app/src/main/res/layout/activity_main.xml
@@ -8,4 +8,12 @@
                 android:paddingBottom="@dimen/activity_vertical_margin"
                 tools:context=".MainActivity">
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Main Page"
+        android:id="@+id/textView"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true"
+        android:textSize="36sp"/>
 </RelativeLayout>
